@@ -2937,10 +2937,10 @@ block|}
 block|}
 annotation|@
 name|Test
-DECL|method|testKillOnLocalizedWhenContainerNotLaunched ()
+DECL|method|testKillOnLocalizedWhenContainerNotLaunchedContainerKilled ()
 specifier|public
 name|void
-name|testKillOnLocalizedWhenContainerNotLaunched
+name|testKillOnLocalizedWhenContainerNotLaunchedContainerKilled
 parameter_list|()
 throws|throws
 name|Exception
@@ -3120,6 +3120,367 @@ argument_list|,
 name|metrics
 operator|.
 name|getKilledContainers
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|metrics
+operator|.
+name|getRunningContainers
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|wc
+operator|!=
+literal|null
+condition|)
+block|{
+name|wc
+operator|.
+name|finished
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testKillOnLocalizedWhenContainerNotLaunchedContainerSuccess ()
+specifier|public
+name|void
+name|testKillOnLocalizedWhenContainerNotLaunchedContainerSuccess
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|WrappedContainer
+name|wc
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|wc
+operator|=
+operator|new
+name|WrappedContainer
+argument_list|(
+literal|17
+argument_list|,
+literal|314159265358979L
+argument_list|,
+literal|4344
+argument_list|,
+literal|"yak"
+argument_list|)
+expr_stmt|;
+name|wc
+operator|.
+name|initContainer
+argument_list|()
+expr_stmt|;
+name|wc
+operator|.
+name|localizeResources
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|ContainerState
+operator|.
+name|LOCALIZED
+argument_list|,
+name|wc
+operator|.
+name|c
+operator|.
+name|getContainerState
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|wc
+operator|.
+name|killContainer
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|ContainerState
+operator|.
+name|KILLING
+argument_list|,
+name|wc
+operator|.
+name|c
+operator|.
+name|getContainerState
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|wc
+operator|.
+name|containerSuccessful
+argument_list|()
+expr_stmt|;
+name|wc
+operator|.
+name|drainDispatcherEvents
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|ContainerState
+operator|.
+name|EXITED_WITH_SUCCESS
+argument_list|,
+name|wc
+operator|.
+name|c
+operator|.
+name|getContainerState
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|wc
+operator|.
+name|c
+operator|.
+name|getLocalizedResources
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|verifyCleanupCall
+argument_list|(
+name|wc
+argument_list|)
+expr_stmt|;
+name|wc
+operator|.
+name|c
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|ContainerEvent
+argument_list|(
+name|wc
+operator|.
+name|c
+operator|.
+name|getContainerId
+argument_list|()
+argument_list|,
+name|ContainerEventType
+operator|.
+name|CONTAINER_RESOURCES_CLEANEDUP
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|ContainerState
+operator|.
+name|DONE
+argument_list|,
+name|wc
+operator|.
+name|c
+operator|.
+name|getContainerState
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|metrics
+operator|.
+name|getRunningContainers
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|wc
+operator|!=
+literal|null
+condition|)
+block|{
+name|wc
+operator|.
+name|finished
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testKillOnLocalizedWhenContainerNotLaunchedContainerFailure ()
+specifier|public
+name|void
+name|testKillOnLocalizedWhenContainerNotLaunchedContainerFailure
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|WrappedContainer
+name|wc
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|wc
+operator|=
+operator|new
+name|WrappedContainer
+argument_list|(
+literal|17
+argument_list|,
+literal|314159265358979L
+argument_list|,
+literal|4344
+argument_list|,
+literal|"yak"
+argument_list|)
+expr_stmt|;
+name|wc
+operator|.
+name|initContainer
+argument_list|()
+expr_stmt|;
+name|wc
+operator|.
+name|localizeResources
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|ContainerState
+operator|.
+name|LOCALIZED
+argument_list|,
+name|wc
+operator|.
+name|c
+operator|.
+name|getContainerState
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|wc
+operator|.
+name|killContainer
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|ContainerState
+operator|.
+name|KILLING
+argument_list|,
+name|wc
+operator|.
+name|c
+operator|.
+name|getContainerState
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|wc
+operator|.
+name|containerFailed
+argument_list|(
+name|ExitCode
+operator|.
+name|FORCE_KILLED
+operator|.
+name|getExitCode
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|wc
+operator|.
+name|drainDispatcherEvents
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|ContainerState
+operator|.
+name|EXITED_WITH_FAILURE
+argument_list|,
+name|wc
+operator|.
+name|c
+operator|.
+name|getContainerState
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|wc
+operator|.
+name|c
+operator|.
+name|getLocalizedResources
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|verifyCleanupCall
+argument_list|(
+name|wc
+argument_list|)
+expr_stmt|;
+name|wc
+operator|.
+name|c
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|ContainerEvent
+argument_list|(
+name|wc
+operator|.
+name|c
+operator|.
+name|getContainerId
+argument_list|()
+argument_list|,
+name|ContainerEventType
+operator|.
+name|CONTAINER_RESOURCES_CLEANEDUP
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|ContainerState
+operator|.
+name|DONE
+argument_list|,
+name|wc
+operator|.
+name|c
+operator|.
+name|getContainerState
 argument_list|()
 argument_list|)
 expr_stmt|;
